Opened 6 years ago

Closed 6 years ago

Last modified 5 years ago

#15040 closed bug (fixed)

Can't boot

Reported by: huggi Owned by: nobody
Priority: normal Milestone: R1/beta2
Component: Drivers/USB/XHCI Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: x86-64

Description

Can't boot latest night build hrev53099 x86_64 Anyboot.

Attachments (3)

IMG_20190429_144144.jpg (4.4 MB ) - added by huggi 6 years ago.
20190501_091243.jpg (3.2 MB ) - added by MelanieFox 6 years ago.
20190501_124236.jpg (4.2 MB ) - added by MelanieFox 6 years ago.
BAR reported by Linux Kernel

Change History (17)

by huggi, 6 years ago

Attachment: IMG_20190429_144144.jpg added

comment:1 by korli, 6 years ago

Component: - GeneralDrivers/USB/XHCI

comment:2 by waddlesplash, 6 years ago

I'm going to need a syslog for this one. Can you try retrieving one via the bootloader somehow?

comment:3 by MelanieFox, 6 years ago

I'am currently also affected by that problem. I recompiled the kernel with XHCI TRACE enabled and it looks like the phys mem location isn't correct. (if you inspect that mem you'll end up with junk which isn't the controllers register mem)

Adding two screenshots.

by MelanieFox, 6 years ago

Attachment: 20190501_091243.jpg added

by MelanieFox, 6 years ago

Attachment: 20190501_124236.jpg added

BAR reported by Linux Kernel

comment:4 by MelanieFox, 6 years ago

NOTE: according to the pci trace the folling lines of code won't work.

physicalAddress += (phys_addr_t)fPCIInfo->u.h0.base_registers[1] << 32;

because pci bus manager stores the high for 64-bit adress in base_registers_pci[1]

currently rebuilding with that little change and hopefully it will work out.

comment:5 by waddlesplash, 6 years ago

Actually that looks like a bug in the PCI bus manager: http://xref.plausible.coop/source/xref/haiku/src/add-ons/kernel/bus_managers/pci/pci.cpp#1298

It sets base_registers_pci but not base_registers for the 64-bit address. On x86 the two are the same; but outside of x86 they are not.

comment:6 by MelanieFox, 6 years ago

okay, took a while. here are my results:

1) at least xhci don't goes kdl, tested both approches ( works on 64bit and 32bit controllers)

2) however after boot keybord works but mouse not. (both attached to the xhci controller)

3) dont' know how to get to the syslog and find out whats wrong now.

comment:7 by waddlesplash, 6 years ago

The syslog is in /var/log/syslog, where else would it be?

If that works, then my patch to the PCI bus is the correct change. I'll just push it.

comment:8 by waddlesplash, 6 years ago

Please retest after hrev53103.

comment:9 by MelanieFox, 6 years ago

Thx. for the work. For some reasons i don't always get the complete log when accessing the phys ssd in virtualbox. However i will try out the new nightly when it arrives and see if the problem persists and if i can find out anything insightfull.

comment:10 by MelanieFox, 6 years ago

Still not working with your change. Same symptoms as before.

comment:11 by waddlesplash, 6 years ago

That's weird, because the very similar #14557 was indeed fixed; and based on your patch description, my change is the exact equivalent. Can you post the patch you used that works here?

comment:12 by MelanieFox, 6 years ago

Sorry that was my fault, accidentially installed the wrong hrev. With 53103 it is indeed fixed with your change.

comment:13 by waddlesplash, 6 years ago

Resolution: fixed
Status: newclosed

Good!

comment:14 by nielx, 5 years ago

Milestone: UnscheduledR1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.